--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "start": "gatsby develop"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-source-contentful": "^2.1.54",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
     "normalize.css": "^8.0.1",
