--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "gatsby develop"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
@@ -18,6 +19,7 @@
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-contentful": "^2.1.54",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
@@ -25,7 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@bsonntag/eslint-config": "^0.5.0",
