Fix typo in description

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "concerts",
   "version": "0.0.0",
   "private": true,
-  "description": "A list of the music concerts and festials I've been to.",
+  "description": "A list of the music concerts and festivals I've been to.",
   "license": "MIT",
   "author": "Benjamim Sonntag <benjamimsonntag@gmail.com>",
   "scripts": {
